# stock-quant-data-loader

./: .gitignore  01-bootstrap-install.md  02-pipeline-operatoire.md  03-architecture-uml.md  04-etat-reel-db.md  05-catalogue-jobs-v3.md  06-contrats-tables-critiques.md  07-matrice-jobs-dependances.md  08-checklists-validation.md  09-debug-incidents-rencontres.md  10-backlog-audit-code.md  README.md  READMEAuto.md  pyproject.toml  readme.txt
docs/: 00-doc-map.md  11-runbook-canonique.md  12-runtime-paths-and-env.md  13-identity-status-universe-model.md  14-db-current-state.md  15-jobs-by-sequence.md  16-troubleshooting.md  17-communication-and-positioning.md  17-db-probe-commands.md  18-job-reference-by-command.md  18-release-and-github-metadata.md  19-known-current-gaps.md
docs/auto_generated/: 00-overview.md  01-repo-inventory.md  02-db-inventory.md  03-jobs-catalog.md  04-functions-and-classes.md  05-db-tables.md  db_inventory.json  db_inventory.md  repo_inventory.json  repo_inventory.md
scripts/: generate_db_inventory.py  generate_docs_bundle.py  generate_repo_inventory.py  rebuild_loader_db.py
sql/checks/: 001_foundation_checks.sql
sql/ddl/: 001_core_foundation.sql  006_instrument_provider_symbol_history.sql
sql/etl/sec/: load_sec_companyfacts_raw_from_parquet.sql  load_sec_companyfacts_raw_from_staged_json.sql
sql/views/: 001_serving_universes.sql  006_price_provider_coverage_by_instrument.sql
src/stock_quant_data/cli/: main.py
src/stock_quant_data/config/: logging.py  settings.py
templates/: DB_TEMPLATE.md  PIPELINE_TEMPLATE.md  README_TEMPLATE.md
(+36 files in other folders)
