[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-quant-data-loader"
version = "0.1.0"
description = "SQL-first market data loader and normalization build pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "tqdm>=4.66.0",
    "pytz>=2024.1",
]

[project.scripts]
sqload = "stock_quant_data.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
